@@ -1560,7 +1560,7 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
     <dt id="cfg_NavigationDisplayLogo">$cfg['NavigationDisplayLogo'] boolean</dt>
     <dd>Defines whether or not to display the phpMyAdmin logo at the top of the left frame.
         Defaults to <code>TRUE</code>.</dd>
-    <dt id="cfg_LeftLogoLink">$cfg['LeftLogoLink'] string</dt>
+    <dt id="cfg_NavigationLogoLink">$cfg['NavigationLogoLink'] string</dt>
     <dd>Enter <abbr title="Uniform Resource Locator">URL</abbr> where logo in the navigation frame will point to.
     For use especially with self made theme which changes this.
     The default value for this is <code>main.php</code>.</dd>
